Реализован основной контроллер и представление main, завершено добавление товара в корзину