@@ -6,19 +6,23 @@ import org.springframework.stereotype.Service;
 import ru.muravin.marketplaceshowcase.dto.ProductToUIDto;
 import ru.muravin.marketplaceshowcase.repositories.ProductsRepository;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductsService {
+    private final CartService cartService;
     ProductsRepository repository;
     @Autowired
-    public ProductsService(ProductsRepository repository) {
+    public ProductsService(ProductsRepository repository, CartService cartService) {
         this.repository = repository;
+        this.cartService = cartService;
     }
     public List<ProductToUIDto> findAll(PageRequest pageRequest) {
-        return repository.findAll(pageRequest)
-                .stream().map(ProductToUIDto::new).collect(Collectors.toList());
+        var products = repository.findAll(pageRequest);
+        var dtoList = products.stream().map(ProductToUIDto::new).toList();
+        enrichDtoListWithCartQuantities(dtoList);
+        return dtoList;
     }
     public void save(ProductToUIDto productToUIDto) {
         repository.save(productToUIDto.transformToProduct());
@@ -28,9 +32,28 @@ public class ProductsService {
     }
 
     public List<ProductToUIDto> findByNameLike(String search, PageRequest pageRequest) {
-        return repository.findByNameLike('%' + search + '%', pageRequest);
+        var products = repository.findByNameLike('%' + search + '%', pageRequest);
+        var dtoList = products.stream().map(ProductToUIDto::new).toList();
+        enrichDtoListWithCartQuantities(dtoList);
+        return dtoList;
     }
     public Long countByNameLike(String search) {
         return repository.countByNameLike('%' + search + '%');
+    }
+
+    private void enrichDtoListWithCartQuantities(List<ProductToUIDto> dtoList) {
+        var cartItems = cartService.getCartItems(cartService.getCartById(1L));
+        var productsMap = new HashMap<>();
+        dtoList.forEach(productToUIDto -> {
+            productsMap.put(productToUIDto.getId(), productToUIDto);
+        });
+        dtoList.forEach(productToUIDto -> {
+            productToUIDto.setQuantityInCart(0);
+        });
+        cartItems.forEach(cartItem -> {
+            if (productsMap.containsKey(cartItem.getProduct().getId())) {
+                ((ProductToUIDto)productsMap.get(cartItem.getProduct().getId())).setQuantityInCart(cartItem.getQuantity());
+            }
+        });
     }
 }
